<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue">

    <RelativeLayout
        android:id="@+id/rlSelf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSelfBlue"
      >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgSelf"
            android:layout_width="@dimen/dimension100dp"
            android:layout_height="@dimen/dimension100dp"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:padding="@dimen/dimension10dp"
            android:src="@drawable/lightblue" />

        <LinearLayout
            android:id="@+id/llSelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="@dimen/dimension10dp"
            android:layout_toLeftOf="@+id/imgSelfFolder"
            android:layout_toRightOf="@+id/imgSelf"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/lato"
                android:id="@+id/txtUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Prashant M"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimension22dp"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="@font/lato"
                android:id="@+id/txtRelation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimension3dp"
                android:text="Self"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimension19dp"
                android:textStyle="normal" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgSelfFolder"
            android:layout_width="@dimen/dimension35dp"
            android:layout_height="@dimen/dimension35dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dimension10dp"
            android:layout_marginTop="@dimen/dimension10dp"
            android:layout_marginRight="@dimen/dimension15dp"
            android:src="@drawable/prof_folder"
            android:tint="@color/colorWhite" />

    </RelativeLayout>

    <TextView
        android:fontFamily="@font/lato"
        android:id="@+id/txtYour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlSelf"
        android:background="@color/colorOnesGray"
        android:paddingLeft="@dimen/dimension15dp"
        android:paddingTop="@dimen/dimension7dp"
        android:paddingBottom="@dimen/dimension7dp"
        android:text="@string/Your"
        android:textColor="@color/colorLogoutTextGray"
        android:textSize="@dimen/dimension17dp"
        android:textStyle="normal" />

    <ListView
        android:id="@+id/lvSelf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtYour"
        android:divider="@null"
        android:paddingBottom="@dimen/dimension10dp"
        ></ListView>

    <TextView
        android:id="@+id/txthelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imghelp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/dimension60dp"
        android:fontFamily="@font/lato"
        android:text="Add a new Profile!"
        android:textColor="@color/colorLightGrays"
        android:textSize="@dimen/dimension20dp"
        android:textStyle="italic|bold" />

    <ImageView
        android:id="@+id/imghelp"
        android:layout_width="@dimen/dimension110dp"
        android:layout_height="@dimen/dimension150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/dimension5dp"
        android:layout_toLeftOf="@+id/frm"
        android:src="@drawable/helparrow"
        android:tint="@color/colorLightGrays" />

    <FrameLayout
        android:id="@+id/frm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
       >

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/dimension20dp"
            android:layout_marginEnd="@dimen/dimension20dp"
            android:layout_marginRight="@dimen/dimension20dp"
            android:layout_marginBottom="@dimen/dimension20dp"
            android:src="@drawable/ic_add"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorRegisteredGreen"
            app:fabSize="normal"
            android:visibility="gone"
            />

        <ImageView
            android:id="@+id/fab"
            android:layout_width="@dimen/dimension70dp"
            android:layout_height="@dimen/dimension70dp"
            android:src="@drawable/plusnew"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimension10dp"
            android:layout_marginRight="@dimen/dimension15dp"
        />
<!--
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dimension16dp"
            android:layout_marginRight="@dimen/dimension16dp"
            android:src="@drawable/plus_n"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorEmerMainGreen"
            app:fabSize="normal" />
-->


    </FrameLayout>


    <com.mindyourlovedone.healthcare.customview.NonScrollGridView
        android:id="@+id/lvConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimension10dp"
        android:layout_marginBottom="@dimen/dimension10dp"
        android:gravity="center_horizontal"
        android:longClickable="true"
        android:numColumns="2"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rlGuide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/dimension20dp">

        <ImageView
            android:id="@+id/imgPicture"
            android:layout_width="@dimen/dimension90dp"
            android:layout_height="@dimen/dimension90dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/emergency_four" />

        <TextView
            android:fontFamily="@font/lato"
            android:id="@+id/txtHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgPicture"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dimension10dp"
            android:gravity="center_horizontal"
            android:text="@string/FTUEmergency"
            android:textColor="@color/colorFTUGray"
            android:textSize="@dimen/dimension22dp"
            android:textStyle="bold"/>

        <TextView
            android:fontFamily="@font/lato"
            android:id="@+id/txtFTU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtHeader"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dimension10dp"
            android:layout_marginTop="@dimen/dimension10dp"
            android:layout_marginRight="@dimen/dimension10dp"
            android:background="@drawable/border_emer_instruc"
            android:gravity="center_horizontal"
            android:paddingLeft="@dimen/dimension35dp"
            android:paddingTop="@dimen/dimension10dp"
            android:paddingRight="@dimen/dimension35dp"
            android:paddingBottom="@dimen/dimension10dp"
            android:text="@string/FTUEmergencyInstruc"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/dimension18dp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/txtMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFTU"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dimension10dp"
            android:layout_marginTop="@dimen/dimension10dp"
            android:layout_marginRight="@dimen/dimension10dp"
            android:gravity="center_horizontal"
            android:text="Add the name and number of the physician you would  most likely want to reach in case of an emergency. Don’t forget to take a picture of their card. You may want to email, text or print it."
            android:textColor="@color/colorGuide"
            android:textSize="@dimen/dimension18dp"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/relMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtFTU"
            android:visibility="gone">

        </RelativeLayout>


        <!--   android:text="Create profiles for members of your family or friends.  Add as much or as little information as you want. The goal is to create less stress and allow you to focus on the issue at hand."
                   -->
    </RelativeLayout>
</RelativeLayout>

